ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-01-22, CAR Team 2024-02-05, CAR Team 2024-02-19, CAR Team 2024-03-04, CAR Team 2024-03-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The command {splitVector ..} currently still targets the primary shard using UNSHARDED  version. This was ok before because the command is supposed to run only on unsharded collection. For the same reason, the command should now run against the unsplittable collection.

      The goal of this ticket is to:

      • update the unsharded version with the correct shard version if the feature flag is enabled 
      • Remove this  check and replace it with a proper router loop ( always check the collection is still unsplittable at every attempt)
      • Refresh in case of input sharded nss and remove this assertion : After the introduction of the {unshardCollection .. } command, the information might be stale on the router. 

       

       

            Assignee:
            Enrico Golfieri
            Reporter:
            Enrico Golfieri
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: