SERVER-84469 make cluster split vector compatible with unsplittable collections (#18052)

GitOrigin-RevId: 4b50dedf9180b5fe0b6d478a718bc8ac907d756a