src/mongo/db/s/split_vector_command.cpp
@@ -49,18 +49,26 @@
 #include "mongo/db/operation_context.h"
 #include "mongo/db/s/split_vector.h"
 #include "mongo/db/service_context.h"
+#include "mongo/db/shard_role.h"
 #include "mongo/db/tenant_id.h"
 #include "mongo/util/assert_util.h"
 #include "mongo/util/database_name_util.h"
 #include "mongo/util/namespace_string_util.h"
 #include "mongo/util/str.h"
 
+using namespace fmt::literals;
 namespace mongo {
 
 using std::string;
 using std::stringstream;
 
 namespace {
+
+std::string rangeString(const BSONObj& min, const BSONObj& max) {
+    std::ostringstream os;
+    os << "{min: " << min.toString() << " , max" << max.toString() << " }";
+    return os.str();
+}
 
 class SplitVector : public ErrmsgCommandDeprecated {
 public:
@@ -172,6 +180,23 @@ public:
 
             return ret;
         }();
+
+        {
+            const auto collection =
+                acquireCollection(opCtx,
+                                  CollectionAcquisitionRequest::fromOpCtx(
+                                      opCtx, nss, AcquisitionPrerequisites::kRead),
+                                  MODE_IS);
+            // The range needs to be entirely owned by one shard. splitVector is only supported for
+            // internal use. The common pattern is to take the min/max boundaries from a chunk,
+            // where the max represent a non-included boundary.
+            uassert(ErrorCodes::InvalidOptions,
+                    "The range {} for the namespace {} is required to be owned by one shard"_format(
+                        rangeString(min, max), nss.toStringForErrorMsg()),
+                    !collection.getShardingDescription().isSharded() ||
+                        collection.getShardingFilter()->isRangeEntirelyOwned(
+                            min, max, false /*includeMaxBound*/));
+        }
 
         auto splitKeys = splitVector(opCtx,
                                      nss,
